k8s/04-spark/deployments/actor-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actor-consumer
  namespace: bigdata
  labels:
    app: actor-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actor-consumer
  template:
    metadata:
      labels:
        app: actor-consumer
    spec:
      containers:
      - name: spark
        image: spark-bigdata:latest
        imagePullPolicy: Never
        command: ["python", "/opt/app/actor_consumer.py"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "1Gi"
            cpu: "600m"
        volumeMounts:
        - name: app-code
          mountPath: /opt/app
      volumes:
      - name: app-code
        hostPath:
          path: /mounted_code
          type: Directory
